# inifile

./: CMakeLists.txt  README.md  README.zh-CN.md
.github/workflows/: cmake_unix.yml  cmake_windows.yml
examples/: inifile_basic.cpp  inifile_case_insensitive.cpp  inifile_comment.cpp  inifile_custom.cpp  inifile_custom2.cpp  inifile_load.cpp  inifile_read.cpp  inifile_save.cpp  inifile_write.cpp
tests/fetchcontent_test/: CMakeLists.txt  README.md  main.cpp
tests/fetchcontent_test/cmake/: add_inifile.cmake
